--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -175,7 +175,7 @@
         "diarrhea": "Diarrhea",
         "fatigue": "Fatigue",
         "fever": "Fever or chills",
-        "headaches": "Headaches",
+        "headaches": "Headache",
         "loss_of_taste_smell": "New loss of taste or smell",
         "muscle_aches": "Muscle or body aches",
         "nausea": "Nausea or vomiting",
