--- a/src/locales/hmn.json
+++ b/src/locales/hmn.json
@@ -28,7 +28,11 @@
     "success_header": "Muab koj tso npe lawm"
   },
   "callback_request": {
-    "callback_button_text": "Thov kom lawv hu tuaj rau koj"
+    "callback_button_text": "Thov kom lawv hu tuaj rau koj",
+    "phonenumber_display_text": "Koj kuj hu tau {{healthAuthorityName}} ntawm ",
+    "phonenumber_display_text2": " lossis xaiv qhov \"Request Callback\" kom lawv hu rov qab rau koj.",
+    "verification_code_warning": "Yog tias koj tsis muaj ib tug code, tiamsis kuaj tau yog mob positive, koj yuav tau nij ib tug naj npawb verification code los ntawm {{healthAuthorityName}}  ",
+    "verification_code_warning2": "lossis xaiv qhov \"Request Callback\" kom lawv hu rov qab rau koj."
   },
   "common": {
     "back": "Tom qab",
@@ -283,6 +287,7 @@
     "complete_healthcheck": "Ua kom tiav kev kuaj mob",
     "could_not_open_link": "Qhib tsis tau kab link: {{url}}. Thov sim qhib kab link no rau hauv koj lub xov tooj.",
     "covid_data": "Ntaub Ntawv Qhia Txog Covid",
+    "covid_data_specific": "{{label}} COVID Data",
     "enter_symptoms": "Sau seb tej tsos mob yog li cas",
     "error": {
       "share_link_failed": "Ua tsis tiav qhib qhib kev qhia tawm"
@@ -292,12 +297,14 @@
     "have_a_positive_test": "Muaj ib tus code tso rau kev kuaj mob uas yog positive los?",
     "location_info_body": "Google xav kom cov xov tooj uas lub hlwb khiav Android 10 rov hauv taws qhov location es thiaj li siv tau Kev Cim Mus Nyob Ze Mob.  {{applicationName}} TSIS khaws tseg tej chaw koj tau mus ncig.",
     "location_info_subheader": "{{applicationName}} tsis khaws tseg tej chaw koj tau mus ncig.",
+    "migrate_enx": "{{applicationName}} nyob hauv txoj kev ceeb toom Exposure Notifications hauv koj lub xov tooj lawm.Nias ntawm no yog xav hloov kho.Mus xyuas {{SHARE_APP_LINK}} yog muaj lus nug.",
     "not_feeling_well": "Puas yog mloog tau li mob lo?",
     "notifications_off": "Qhib qhov ceeb toom thiaj li tau txais ntawv ceeb toom yog koj raug nphav tus kab mob",
     "proximity_tracing_info_body_1": "Yog tias cov xov tooj uas muaj lub app nyob hauv thiab muab taws, muaj Bluetooth, thiab nyob sib ze rau ib lub sijhawm twg, ces yuav cuv cia tias tau mus raug nyob rau hauv koj lub xov tooj.",
     "proximity_tracing_info_body_2": "Nyob rau lub sijhawm koj mus raug nws, koj tej ntaub ntawv yuav tsis qhia tawm rau nws paub. Lub app no tsis ceev tseg koj ntaub ntawv ntiag tug. Tsuas yog cov naj npawb hloov mus hloov los random ID xwb. Tej no yuav muab lwv tawm li ntawm 14 hnub.",
     "proximity_tracing_info_subheader_1": "Kev Ceeb Toom Raug Mob ua haujlwm li cas?",
     "proximity_tracing_info_subheader_2": "Kuv li ntaub ntawv puas ceev zoo cia?",
+    "safe_travel_guidance": "Lus Qhia Xyuas Xim Ncig Tebchaws",
     "take_assessment": "Mus teb ib co lus nug ntsuas",
     "verification_code_card": {
       "if_you_have_a_code": "Xa tawm koj tus verification code thiaj li pab tau koj lub zej lub zog nyob nyab xeeb.",
